--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -30,9 +28,15 @@
         <script src="files/script/lightbox.js"></script>
         <script src="files/script/slick.js"></script>
         <script src="files/script/bootstrap.js"></script>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-448RZW94LR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-        
-        
+  gtag('config', 'G-448RZW94LR');
+</script>
         </head>
 
 
